# cmd/kms-server/main.go
@@ -117,10 +117,18 @@ func runServer(c *cli.Context) error {
 	e.GET("/addresses", func(c echo.Context) error {
 		return handlers.HandleAddresses(c, cfg.Logger, kmsClient)
 	}, keyAuth)
+	e.GET("/addresses/v2", func(c echo.Context) error {
+		return handlers.HandleAddressesV2(c, cfg.Logger, kmsClient)
+	}, keyAuth)
 
 	// env endpoint with rate limiting
 	e.POST("/env", func(c echo.Context) error {
 		return handlers.HandleEnv(c, cfg.Logger, attestationVerifier, chainClient, kmsClient, cfg.Debug)
+	}, middleware.RateLimiter(middleware.NewRateLimiterMemoryStore(rate.Limit(cfg.EnvRateLimit))))
+
+	// env v2 endpoint with rate limiting
+	e.POST("/env/v2", func(c echo.Context) error {
+		return handlers.HandleEnvV2(c, cfg.Logger, attestationVerifier, chainClient, kmsClient, cfg.Debug)
 	}, middleware.RateLimiter(middleware.NewRateLimiterMemoryStore(rate.Limit(cfg.EnvRateLimit))))
 
 	// Swagger endpoint
